# boids

./: CMakeLists.txt  README.md
include/: Boid.h  Vector.h  utils.h
src/: Boid.cpp  Vector.cpp  main.cpp  utils.cpp
